unpackaged/main/default/objects/hed__Education_History__c/hed__Education_History__c.object-meta.xml
<CustomObject>
    <description>Stores information about a Contact&#39;s education history and related data.</description>
    <label>Education History</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>