unpackaged/main/default/objects/hed__Education_History__c/fields/Degree_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Degree_Awarded__c</fullName>
    <description>The level of the degree the Student has earned.</description>
    <inlineHelpText>The level of the degree the Student has earned.</inlineHelpText>
    <label>Degree Awarded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AB</fullName>
                <label>AB-Bachelor of Arts</label>
            </value>
            <value>
                <fullName>W53</fullName>
                <label>Adult Cert. of Comp-CPT Eligib</label>
            </value>
            <value>
                <fullName>W44</fullName>
                <label>Adult Cert. of Completion</label>
            </value>
            <value>
                <fullName>W56</fullName>
                <label>Adult Cert of Compl-ACCEL18cr</label>
            </value>
            <value>
                <fullName>W57</fullName>
                <label>Adult Common PL Test -ACCEL 18</label>
            </value>
            <value>
                <fullName>W43</fullName>
                <label>Adult Standard High School</label>
            </value>
            <value>
                <fullName>W52</fullName>
                <label>Adult Standard HS Alternative</label>
            </value>
            <value>
                <fullName>W54</fullName>
                <label>Adult Standard HS Diploma-18cr</label>
            </value>
            <value>
                <fullName>W59</fullName>
                <label>Adult Stand HS Dipl-24 Credit</label>
            </value>
            <value>
                <fullName>W58</fullName>
                <label>Adult Stand HS Dipl-ACCEL 18cr</label>
            </value>
            <value>
                <fullName>W55</fullName>
                <label>Adult Stand HS Dipl-ACCEL 18cred</label>
            </value>
            <value>
                <fullName>W60</fullName>
                <label>Adult Stand HS Dipl COVID-19</label>
            </value>
            <value>
                <fullName>W45</fullName>
                <label>Adult State of FL GED diploma</label>
            </value>
            <value>
                <fullName>ATC</fullName>
                <label>Advanced Technical Certificate</label>
            </value>
            <value>
                <fullName>ATV</fullName>
                <label>Adv Tech Diploma for Voc Cred</label>
            </value>
            <value>
                <fullName>MAG</fullName>
                <label>Agriculture</label>
            </value>
            <value>
                <fullName>APS</fullName>
                <label>Applied Science</label>
            </value>
            <value>
                <fullName>ATD</fullName>
                <label>Applied Technical Diploma</label>
            </value>
            <value>
                <fullName>APT</fullName>
                <label>Applied Technology</label>
            </value>
            <value>
                <fullName>MAR</fullName>
                <label>Architecture</label>
            </value>
            <value>
                <fullName>ASMA</fullName>
                <label>AS Medical Assisting</label>
            </value>
            <value>
                <fullName>AA</fullName>
                <label>Associate in Arts</label>
            </value>
            <value>
                <fullName>ABA</fullName>
                <label>Associate in Business Admin</label>
            </value>
            <value>
                <fullName>AGS</fullName>
                <label>Associate in General Studies</label>
            </value>
            <value>
                <fullName>AHS</fullName>
                <label>Associate in Health Science</label>
            </value>
            <value>
                <fullName>ANA</fullName>
                <label>Associate in Networking Admin</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>Associate in Science</label>
            </value>
            <value>
                <fullName>AAS</fullName>
                <label>Associate of Applied Science</label>
            </value>
            <value>
                <fullName>BSSE</fullName>
                <label>Bac/Sci Spec. Education</label>
            </value>
            <value>
                <fullName>BEE</fullName>
                <label>Bach Electrical Engineering</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>