unpackaged/main/default/objects/hed__Education_History__c/fields/Diploma_Type__c.field-meta.xml
<CustomField>
    <fullName>Diploma_Type__c</fullName>
    <formula>TEXT( Degree_Awarded__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diploma Type</label>
    <type>Text</type>
</CustomField>