unpackaged/main/default/objects/hed__Education_History__c/fields/hed__Degree_Earned__c.field-meta.xml
<CustomField>
    <fullName>hed__Degree_Earned__c</fullName>
    <description>If applicable, the level of the degree the Contact earned at this Educational Institution.</description>
    <inlineHelpText>If applicable, the level of the degree the Contact earned at this Educational Institution.</inlineHelpText>
    <label>Degree Earned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GED</fullName>
            </value>
            <value>
                <fullName>High School Diploma</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
                <isActive>false</isActive>
                <label>AA</label>
            </value>
            <value>
                <fullName>AAS</fullName>
                <isActive>false</isActive>
                <label>AAS</label>
            </value>
            <value>
                <fullName>AGS</fullName>
                <isActive>false</isActive>
                <label>AGS</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <isActive>false</isActive>
                <label>AS</label>
            </value>
            <value>
                <fullName>ATC</fullName>
                <isActive>false</isActive>
                <label>ATC</label>
            </value>
            <value>
                <fullName>ATD</fullName>
                <isActive>false</isActive>
                <label>ATD</label>
            </value>
            <value>
                <fullName>ATV</fullName>
                <isActive>false</isActive>
                <label>ATV</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <isActive>false</isActive>
                <label>BA</label>
            </value>
            <value>
                <fullName>BAS</fullName>
                <isActive>false</isActive>
                <label>BAS</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <isActive>false</isActive>
                <label>BS</label>
            </value>
            <value>
                <fullName>BSN</fullName>
                <isActive>false</isActive>
                <label>BSN</label>
            </value>
            <value>
                <fullName>CCC</fullName>
                <isActive>false</isActive>
                <label>CCC</label>
            </value>
            <value>
                <fullName>CPP</fullName>
                <isActive>false</isActive>
                <label>CPP</label>
            </value>
            <value>
                <fullName>CTC</fullName>
                <isActive>false</isActive>
                <label>CTC</label>
            </value>
            <value>
                <fullName>Certificate</fullName>
                <isActive>false</isActive>
                <label>Certificate</label>
            </value>
            <value>
                <fullName>JD</fullName>
                <isActive>false</isActive>
                <label>JD</label>
            </value>
            <value>
                <fullName>MA</fullName>
                <isActive>false</isActive>
                <label>MA</label>
            </value>
            <value>
                <fullName>MBA</fullName>
                <isActive>false</isActive>
                <label>MBA</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <isActive>false</isActive>
                <label>MD</label>
            </value>
            <value>
                <fullName>MS</fullName>
                <isActive>false</isActive>
                <label>MS</label>
            </value>
            <value>
                <fullName>NDG</fullName>
                <isActive>false</isActive>
                <label>NDG</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>PhD</fullName>
                <isActive>false</isActive>
                <label>PhD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>