unpackaged/main/default/objects/hed__Education_History__c/fields/hed__Details__c.field-meta.xml
<CustomField>
    <fullName>hed__Details__c</fullName>
    <description>Additional details about this student&#39;s educational history.</description>
    <inlineHelpText>Additional details about this student&#39;s educational history.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>