unpackaged/main/default/objects/hed__Education_History__c/fields/hed__GPA__c.field-meta.xml
<CustomField>
    <fullName>hed__GPA__c</fullName>
    <description>The Contact&#39;s final grade point average.</description>
    <inlineHelpText>The Contact&#39;s final grade point average.</inlineHelpText>
    <label>GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>