unpackaged/main/default/objects/hed__Education_History__c/fields/School_Code__c.field-meta.xml
<CustomField>
    <fullName>School_Code__c</fullName>
    <description>High School or College Code</description>
    <inlineHelpText>High School or College Code</inlineHelpText>
    <label>School Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>