unpackaged/main/default/objects/hed__Education_History__c/fields/Term_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Term_Awarded__c</fullName>
    <description>Term Awarded</description>
    <inlineHelpText>Term Awarded</inlineHelpText>
    <label>Term Awarded</label>
    <length>4</length>
    <type>Text</type>
</CustomField>