unpackaged/main/default/objects/hed__Education_History__c/fields/traa_Application__c.field-meta.xml
<CustomField>
    <fullName>traa_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Application record</description>
    <inlineHelpText>Lookup to Application record</inlineHelpText>
    <label>Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Education History</relationshipLabel>
    <relationshipName>Education_History</relationshipName>
    <type>Lookup</type>
</CustomField>