unpackaged/main/default/objects/hed__Education_History__c/fields/traa_Credential_Certificate__c.field-meta.xml
<CustomField>
    <fullName>traa_Credential_Certificate__c</fullName>
    <description>Credential or Certificate related to Degree</description>
    <inlineHelpText>Credential or Certificate related to Degree</inlineHelpText>
    <label>Credential / Certificate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>