unpackaged/main/default/objects/hed__Education_History__c/fields/traa_Degree__c.field-meta.xml
<CustomField>
    <fullName>traa_Degree__c</fullName>
    <description>The type of degree in progress or achieved</description>
    <inlineHelpText>The type of degree in progress or achieved</inlineHelpText>
    <label>Degree</label>
    <length>80</length>
    <type>Text</type>
</CustomField>