unpackaged/main/default/objects/hed__Education_History__c/fields/traa_Degree_Major__c.field-meta.xml
<CustomField>
    <fullName>traa_Degree_Major__c</fullName>
    <description>Name of Major Degree</description>
    <inlineHelpText>Name of Major Degree</inlineHelpText>
    <label>Degree Major</label>
    <length>80</length>
    <type>Text</type>
</CustomField>