unpackaged/main/default/objects/hed__Education_History__c/fields/traa_Degree_Minor__c.field-meta.xml
<CustomField>
    <fullName>traa_Degree_Minor__c</fullName>
    <description>Name of Minor Degree</description>
    <inlineHelpText>Name of Minor Degree</inlineHelpText>
    <label>Degree Minor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>