unpackaged/main/default/objects/hed__Education_History__c/fields/Unofficial_HS_GPA__c.field-meta.xml
<CustomField>
    <fullName>Unofficial_HS_GPA__c</fullName>
    <label>Unofficial HS GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>