unpackaged/main/default/objects/hed__Education_History__c/fields/Unweighted_GPA__c.field-meta.xml
<CustomField>
    <fullName>Unweighted_GPA__c</fullName>
    <label>Unweighted GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>