unpackaged/main/default/objects/hed__Education_History__c/fields/Weighted_GPA__c.field-meta.xml
<CustomField>
    <fullName>Weighted_GPA__c</fullName>
    <label>Weighted GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>