unpackaged/main/default/objects/hed__Education_History__c/recordTypes/traa_Credential.recordType-meta.xml
<RecordType>
    <fullName>traa_Credential</fullName>
    <active>false</active>
    <description>This is for Educational Credential Details</description>
    <label>Credential</label>
</RecordType>