unpackaged/main/default/objects/hed__Education_History__c/recordTypes/traa_Degree.recordType-meta.xml
<RecordType>
    <fullName>traa_Degree</fullName>
    <active>true</active>
    <description>This is for Educational Degree Details</description>
    <label>Education History Degree</label>
</RecordType>